--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -1,6 +1,7 @@
 .layout-wrapper {
     display: flex;
     height: 100vh;
+    height: 100dvh;
     width: 100vw;
     overflow: hidden;
     background: radial-gradient(circle at 15% 50%, rgba(20, 20, 25, 1) 0%, rgba(10, 10, 12, 1) 100%);
@@ -10,6 +11,7 @@
 .sidebar {
     width: 280px;
     height: calc(100vh - 32px);
+    height: calc(100dvh - 32px);
     margin: 16px;
     display: flex;
     flex-direction: column;
@@ -219,6 +221,7 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
+    height: 100dvh;
     position: relative;
 }
 
